# rendergraph-gui

./: .clang-format  CMakeLists.txt  README.md
src/: abstractnetworkmodel.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  networkview.cpp  networkview.hpp  nodeitemmodel.hpp  standardnetworkmodel.cpp  standardnetworkmodel.hpp
src/QtAwesome/: QtAwesome.cpp
src/client/: client.cpp  client.h  client.hpp
src/gfx/: argumentblock.h  buffer.h  color.h  format.h  gfx.h  handle.h  image.h  imageformat.h  pipeline.h  rect.h  sampler.h  shader.h  signature.h  types.h
src/gfxopengl/: argumentblock.cpp  argumentblock.h  buffer.cpp  buffer.h  formatinfo.cpp  formatinfo.h  glcore45.cpp  glcore45.h  glcore45types.h  glhandle.h  image.cpp  image.h  opengl.cpp  opengl.h  shader.cpp  shader.h  statecache.cpp  statecache.h  sync.cpp  sync.h  uploadbuffer.h
src/img/: constantbufferbuilder.h  image.cpp  image.h  imgclear.cpp  imgclear.h  imgevaluator.cpp  imgevaluator.h  imgnetwork.cpp  imgnetwork.h  imgnode.cpp  imgnode.h  imgoutput.cpp  imgoutput.h  imgshadernode.cpp  imgshadernode.h  outputnode.cpp  outputnode.h  rendertarget.cpp  rendertarget.h  screenspacenetwork.cpp  screenspacenetwork.h  screenspacenode.cpp  screenspacenode.h  shadergen.cpp  shadergen.h
src/node/: blueprint.cpp  blueprint.h  description.cpp  description.h  input.h  network.cpp  network.h  node.cpp  node.h  observer.h  output.h  param.cpp  param.h  render.h  template.cpp  template.h
src/render/: constantbufferbuilder.h  image.cpp  image.h  input.h  network.cpp  network.h  node.cpp  node.h  observer.h  output.h  param.h  render.h  rendertarget.cpp  rendertarget.h  screenspacenode.cpp  screenspacenode.h  screenspacepass.cpp  screenspacepass.h  shadergen.cpp  shadergen.h
src/ui/: abstractnetworkmodel.cpp  abstractnetworkmodel.hpp  connectdialog.hpp  imageview.cpp  imageview.hpp  imageviewprivate.h  imageviewprivate.hpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  networkview.cpp  networkview.h  networkview.hpp  renderoutputview.h  standardnetworkmodel.cpp  standardnetworkmodel.h  standardnetworkmodel.hpp
src/ui/QtAwesome/: QtAwesome.h
src/ui/nodes/: nodeparams.cpp  nodeparams.h
src/util/: arrayref.h  arrayref.hpp  filesystem.h  hash.h  jsonreader.cpp  jsonreader.h  jsonreader.hpp  jsonwriter.cpp  jsonwriter.h  jsonwriter.hpp  log.cpp  log.hpp  logprivate.hpp  panic.h  stringref.h  stringref.hpp  value.cpp  value.h  value.hpp
